--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
         </ul>
         <div class="container">
         </div>
+        <script type="text/javascript" src="js/snow.js"></script>
     </body>
 </html>
