--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<script type="text/javascript" src="js/modernizr.custom.86080.js"></script>
     </head>
     <body id="page">
+	<audio src="Everlasting Summer - Bright Side.mp3" autoplay="autoplay">
+		Тег audio не поддерживается вашим браузером. Необходимо обновить браузер!
+	</audio>
         <ul class="cb-slideshow">
             <li><span>Image 01</span></li>
             <li><span>Image 02</span></li>
