--- a/index.html
+++ b/index.html
@@ -1,38 +1,1 @@
-<!DOCTYPE html>
-<!--[if lt IE 7 ]> <html class="ie ie6 no-js" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="ie ie7 no-js" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="ie ie8 no-js" lang="en"> <![endif]-->
-<!--[if IE 9 ]>    <html class="ie ie9 no-js" lang="en"> <![endif]-->
-<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title>Для Вики</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <meta name="description" content="Slider for Vika" />
-        <meta name="author" content="Igor" />
-        <link rel="shortcut icon" href="favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="css/default.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
-		<script type="text/javascript" src="js/modernizr.custom.86080.js"></script>
-    </head>
-    <body id="page">
-    <audio src="Everlasting Summer - Bright Side.mp3" autoplay="autoplay">Тег audio не поддерживается вашим браузером. Необходимо обновить браузер!
-    </audio>
-        <ul class="cb-slideshow">
-            <li><span>Image 01</span></li>
-            <li><span>Image 02</span></li>
-            <li><span>Image 03</span></li>
-            <li><span>Image 04</span></li>
-            <li><span>Image 05</span></li>
-            <li><span>Image 06</span></li>
-            <li><span>Image 07</span></li>
-            <li><span>Image 08</span></li>
-            <li><span>Image 09</span></li>
-            <li><span>Image 10</span></li>
-            <li><span>Image 11</span></li>
-            <li><span>Image 11</span></li>
-        </ul>
-        <script type="text/javascript" src="js/snow.js"></script>
-    </body>
-</html>
+<!DOCTYPE html> <!--[if lt IE 7 ]><html class="ie ie6 no-js" lang="en"> <![endif]--> <!--[if IE 7 ]><html class="ie ie7 no-js" lang="en"> <![endif]--> <!--[if IE 8 ]><html class="ie ie8 no-js" lang="en"> <![endif]--> <!--[if IE 9 ]><html class="ie ie9 no-js" lang="en"> <![endif]--> <!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]--><head><meta charset="UTF-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><title>Для Вики</title><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Slider for Vika" /><meta name="author" content="Igor" /><link rel="shortcut icon" href="favicon.ico"><link rel="stylesheet" type="text/css" href="css/default.css" /><link rel="stylesheet" type="text/css" href="css/style.css" /> <script type="text/javascript" src="js/modernizr.custom.86080.js"></script> </head><body id="page"> <audio src="Everlasting Summer - Bright Side.mp3" autoplay="autoplay">Тег audio не поддерживается вашим браузером. Необходимо обновить браузер! </audio><ul class="cb-slideshow"><li><span>Image 01</span></li><li><span>Image 02</span></li><li><span>Image 03</span></li><li><span>Image 04</span></li><li><span>Image 05</span></li><li><span>Image 06</span></li><li><span>Image 07</span></li><li><span>Image 08</span></li><li><span>Image 09</span></li><li><span>Image 10</span></li><li><span>Image 11</span></li><li><span>Image 11</span></li></ul> <script type="text/javascript" src="js/snow.js"></script> </body></html>
