--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <audio src="Everlasting Summer - Bright Side.mp3" autoplay="autoplay">Тег audio не поддерживается вашим браузером. Необходимо обновить браузер!
     </audio>
         <ul class="cb-slideshow">
-            <li><span>Image 01</span></li>
-            <li><span>Image 02</span></li>
-            <li><span>Image 03</span></li>
-            <li><span>Image 04</span></li>
-            <li><span>Image 05</span></li>
-            <li><span>Image 06</span></li>
-            <li><span>Image 07</span></li>
-            <li><span>Image 08</span></li>
-            <li><span>Image 09</span></li>
-            <li><span>Image 10</span></li>
-            <li><span>Image 11</span></li>
-            <li><span>Image 11</span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span></span></li>
         </ul>
         <script type="text/javascript" src="js/snow.js"></script>
     </body>
